# investment-tracker

./: ARCHITECTURE.md  CONSTITUTION.md  Cargo.toml  FEATURE_ROADMAP.md  PLAN.md  README.md  TASKS.md
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.vibe/agents/: specify-agents.md
benches/: portfolio.rs
specs/001-create-investment-tracker/: plan.md  spec.md
src/: error.rs  main.rs  models.rs  storage.rs
src/cli/commands/: add.rs  add_dividend.rs  add_price.rs  analytics.rs  config.rs  delete.rs  export.rs  import.rs  interactive.rs  list.rs  list_dividends.rs  mod.rs  performance.rs  portfolio.rs  sell.rs  update.rs  view.rs
src/core/: config.rs  mod.rs  models.rs  portfolio.rs  storage.rs
src/utils/: display.rs
tests/: cli_integration.rs
