[package]
name = "investment_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI investment tracker for managing your investment portfolio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/investment-tracker"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"