[package]
name = "investment_tracker"
version = "1.1.1"
edition = "2024"
authors = ["Pedro Flores"]
description = "A CLI investment tracker for managing your investment portfolio"
license = "MIT"
repository = "https://github.com/pedrodbflores/investment-tracker"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
libc = "0.2"
comfy-table = "7.1"
csv = "1.3"
indicatif = "0.17"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
